2006-08-08  Ian Jackson  <iwj@ubuntu.com>

	* lib/dpkg-db.h (deptype): Add dep_breaks.
	* lib/fields.c (f_dependency): Bail out if the Breaks field has an
	alternative through a '|'.
	* lib/parse.c (fieldinfos): Add support for the Breaks field when
	parsing them as a depedency field.
	* src/depcon.c (describedepcon): Support displaying the Breaks
	relationship.
	(depisok): Ignore the Breaks field by adding dep_breaks to the assert
	and returning as succeeded.
	* src/processarc.c (process_archive): Print a message stating that
	current dpkg does not support the Breaks field. Do not bail out in
	case the Breaks references packages to ignore for dependency handling.
	* src/packages.c (dependencies_ok): Add a place holder comment to
	be replaced by the code to prevent configuration of Broken packages.

2006-07-07  Nicolas François  <nicolas.francois@centraliens.net>

	* dpkg-deb/build.c: Specify --null before the -T option to avoid
	the "tar: -: file name read contains nul character" warning.

2006-06-21  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.23~.

2006-06-21  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.22.

2006-06-21  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (signal_str, schedule_str): Move
	variables inside ...
	(parse_options): ... here.

2006-06-21  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (umask_value): New variable.
	(do_help): Print information about the new '--umask' option.
	(parse_umask): New function.
	(parse_options): Parse the new option using parse_umask.
	(main): Set umask, and do not set for the background case if we set
	it previously.

2006-06-21  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (usageerr): Do not mark "%s: %s" for
	translation.
	* scripts/changelog/debian.pl: Remove "or argument" from the
	"unkown option" string to merge it with other similar ones.