@@ -3,6 +3,8 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Add initial support for the Breaks field, by parsing but rejecting it.
     Thanks to Ian Jackson <iwj@ubuntu.com>. Closes: #375703
+  * Use dpkg-architecture from the source tree to get the target Debian
+    architecture, instead of duplicating the logic in the m4 files.
 
   [ Added dpkg Translations ]
   * Dzongkha (Kinley Tshering)
